--- a/MobilePart/app/src/main/AndroidManifest.xml
+++ b/MobilePart/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MySmartDoorApp"
         tools:targetApi="31">
-
+        <activity
+            android:name=".UserProfileActivity"
+            android:exported="false" />
         <activity
             android:name="com.canhub.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
